--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,30 +18,30 @@
 <!-- SECTION CONTAINER -->
 <div class="container-fluid fullscreen-section">
   <div class="row position-relative top-20 justify-content-center">
-    <div class="col-4 text-end">
-      <img class="img-fluid home-hero" src="../../assets/png/tasks.png" alt="">
+    <div class="col-xxl-4 text-center me-5" id="welcome-image">
+      <img class="img-fluid home-hero" src="../../assets/home_working.svg" alt="">
     </div>
-    <div class="col-4 text-start align-self-center pt-5">
-        <h1 class="text-color mb-2">Bienvenido a Inisnia</h1>
-        <p class="text-color mb-1">Somos un grupo de trabajo que ha desarrollado la herramienta definitiva para los Rankings. Tanto para uso escolar, casual y profesional.</p>
-        <p class="text-small text-muted-color mb-3">Disponible para navegador</p>
-        <a class="btn btn-color text-light py-sm-2 px-sm-3 rounded-pill shadow-sm me-2">Comienza</a>
-        <a class="btn btn-outline-color py-sm-2 px-sm-3 rounded-pill shadow-sm">Contáctanos</a>
+    <div class="col-xxl-4 text-start align-self-center" id="welcome">
+      <h1 class="text-color mb-2">Bienvenido a Inisnia</h1>
+      <p class="text-color mb-1">Insinia es un grupo que ha desarrollado la herramienta definitiva para los Rankings. <br> Tanto para uso escolar, casual y profesional.</p>
+      <p class="text-small text-muted-color mb-3">Disponible para navegador</p>
+      <a class="btn btn-color text-light py-sm-2 px-sm-3 rounded-pill shadow-sm me-2">Comienza</a>
+      <a class="btn btn-outline-color py-sm-2 px-sm-3 rounded-pill shadow-sm">Contáctanos</a>
     </div>
   </div>
 </div>
 
 <div class="container-fluid fullscreen-section">
   <div class="row">
-    <div class="col">
+    <div class="col-xxl mb-3">
       <div class="card-custom shadow-sm text-light">
         <div class="card-body">
-          <div class="row">
-            <div class="col-6 ps-5 align-self-center">
+          <div class="row px-4">
+            <div class="col-6  align-self-center">
               <h2>Ofrecemos lo siguiente:</h2>
-              <h5 class="mt-4">· Colaboración</h5>
-              <h5>· Organización</h5>
-              <h5>· Facilidad de uso</h5>
+              <h5 class="mt-2"><i class="bi bi-patch-check-fill me-2"></i>Colaboración</h5>
+              <h5><i class="bi bi-patch-check-fill me-2"></i>Organización</h5>
+              <h5><i class="bi bi-patch-check-fill me-2"></i>Facilidad de uso</h5>
             </div>
             <div class="col-6 text-end">
               <img class="img-fluid home-hero-card" src="../../assets/png/colaboration.png">
@@ -51,30 +51,30 @@
       </div>
     </div>
   </div>
-  <div class="row gap-2 mt-4">
-    <div class="col">
+  <div class="row">
+    <div class="col-xxl mb-3">
       <div class="card-custom shadow-sm text-light">
         <div class="card-body">
-          <div class="row g-0">
-            <div class="col-6 ps-4 align-self-center">
+          <div class="row">
+            <div class="col ps-4 align-self-center">
               <h2>Organización</h2>
               <h3>Una genial manera de manejar organizar, cambiar y editar.</h3>
             </div>
-            <div class="col-6 text-end">
-              <img class="img-fluid home-hero" src="../../assets/png/manage.png">
+            <div class="col text-end">
+              <img class="img-fluid home-hero-card" src="../../assets/png/manage.png">
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="col">
+    <div class="col-xxl mb-3">
       <div class="card-custom shadow-sm text-light">
         <div class="card-body">
-          <div class="row g-0">
-            <div class="col-6 text-end">
-              <img class="img-fluid home-hero" src="../../assets/png/colaboration_group.png">
+          <div class="row">
+            <div class="col ps-2 text-start">
+              <img class="img-fluid home-hero-card" src="../../assets/png/colaboration_group.png">
             </div>
-            <div class="col-6 ps-4 align-self-center">
+            <div class="col pe-4 align-self-center text-end">
               <h2>Colaboración</h2>
               <h3>La colaboracion es uno de nuestros lemas.</h3>
             </div>
