--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,12 +13,12 @@
   </div>
 </div>
 
-<div class="container-fluid fullscreen-section">
-  <div class="row position-relative top-20 justify-content-center">
-    <div class="col-xxl-4 text-center me-5" id="welcome-image">
-      <img class="img-fluid home-hero" src="../../assets/home_working.svg" alt="">
+<div class="container-fluid fullscreen-section mb-5" id="section-land">
+  <div class="row top-20 justify-content-center">
+    <div class="col-xl-4 text-center me-5" id="welcome-image">
+      <img class="img-fluid home-hero" src="../../assets/svg/working.svg" alt="">
     </div>
-    <div class="col-xxl-4 text-start align-self-center" id="welcome">
+    <div class="col-xl-4 text-start align-self-center" id="welcome">
       <h1 class="text-color mb-2">Bienvenido a Inisnia</h1>
       <p class="text-color mb-1">Insinia es un grupo que ha desarrollado la herramienta definitiva para los Rankings. <br> Tanto para uso escolar, casual y profesional.</p>
       <p class="text-small text-muted-color mb-3">Disponible para navegador</p>
@@ -41,7 +41,7 @@
               <h5><i class="bi bi-patch-check-fill me-2"></i>Facilidad de uso</h5>
             </div>
             <div class="col-6 text-end">
-              <img class="img-fluid home-hero-card" src="../../assets/png/colaboration.png">
+              <img class="img-fluid home-hero-card" src="../../assets/svg/colaboration.svg">
             </div>
           </div>
         </div>
@@ -58,7 +58,7 @@
               <h3>Una genial manera de manejar organizar, cambiar y editar.</h3>
             </div>
             <div class="col text-end">
-              <img class="img-fluid home-hero-card" src="../../assets/png/manage.png">
+              <img class="img-fluid home-hero-card" src="../../assets/svg/manage.svg">
             </div>
           </div>
         </div>
@@ -68,12 +68,12 @@
       <div class="card-custom shadow-sm text-light">
         <div class="card-body">
           <div class="row">
-            <div class="col ps-2 text-start">
-              <img class="img-fluid home-hero-card" src="../../assets/png/colaboration_group.png">
+            <div class="col g-0 text-start">
+              <img class="img-fluid home-hero-card" src="../../assets/svg/group.svg">
             </div>
             <div class="col pe-4 align-self-center text-end">
               <h2>Colaboración</h2>
-              <h3>La colaboracion es uno de nuestros lemas.</h3>
+              <h3>La colaboración es prioridad para nosotros.</h3>
             </div>
           </div>
         </div>
@@ -95,6 +95,12 @@
           <a href="https://www.microsoft.com/es-es/edge"><img src="../../assets/edge.png" class="mx-3 browser" width="50" alt="edge icon"></a>
       </div>
     </div>
+  </div>
+</div>
+
+<div class="fixed-bottom pe-2 pb-2" *ngIf="goupStatus" @slideInOut>
+  <div class="text-end">
+    <a rotuerLink="#welcome-image" class="btn btn-color text-light" id="go-up"><i class="bi bi-arrow-up-circle-fill"></i></a>
   </div>
 </div>
 
