--- a/src/app/user-page/user-page.component.html
+++ b/src/app/user-page/user-page.component.html
@@ -9,18 +9,20 @@
   "
 >
   <div class="container-fluid">
-    <a class="navbar-brand" routerLink="/home">Insinia</a>
+    <a class="navbar-brand" routerLink="/home"
+      ><logo [animated]="false" [width]="20"></logo
+    ></a>
     <div class="d-flex justify-content-center">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <button class="nav-link btn active" routerLink="/home">
-            <i class="bi bi-house-door-fill"></i>
-          </button>
+          <a class="nav-link text-light active" routerLink="/home">
+            <i class="bi icon-lg bi-house-door-fill"></i>
+          </a>
         </li>
         <li class="nav-item">
-          <button class="nav-link btn" routerLink="/login">
-            <i class="bi bi-person-circle"></i>
-          </button>
+          <a class="nav-link text-light" routerLink="/login">
+            <i class="bi icon-lg bi-person-circle"></i>
+          </a>
         </li>
       </ul>
     </div>
@@ -29,10 +31,50 @@
 
 <div class="container text-color">
   <div class="border-0 shadow-sm card-hover-primary">
+    <div class="d-flex gap-2 justify-content-end">
+      <button
+        *ngIf="profile"
+        class="btn btn-sm btn-color text-light"
+        data-bs-toggle="modal"
+        data-bs-target="#profilePictureModal"
+      >
+        Cambiar foto
+        <i class="ms-1 bi bi-image"></i>
+      </button>
+      <button
+        *ngIf="profile"
+        class="btn btn-sm btn-color text-light"
+        (click)="toggleEdit()"
+      >
+        Editar perfil
+        <i class="ms-1 bi bi-pen"></i>
+      </button>
+      <button
+        *ngIf="!profile"
+        class="
+          btn btn-sm btn-color
+          text-light
+          placeholder placeholder-glow
+          disabled
+          col-2
+        "
+      ></button>
+      <button
+        *ngIf="!profile"
+        class="
+          btn btn-sm btn-color
+          text-light
+          placeholder placeholder-glow
+          disabled
+          col-2
+        "
+      ></button>
+    </div>
+
     <div class="row justify-content-center">
       <div id="content" class="content">
         <div class="row">
-          <div class="ms-3 col-auto col-sm-auto">
+          <div class="ms-3 col-auto">
             <img
               [@fadeIn]
               *ngIf="profile && profile.avatar"
@@ -41,39 +83,25 @@
             />
             <img [@fadeIn] *ngIf="!profile" class="thumbnails img-fluid" />
           </div>
-          <div *ngIf="profile" class="col-auto">
+          <div *ngIf="profile" class="col">
             <h2 class="m-0">{{ profile.name + " " + profile.lastName }}</h2>
             <small>Te uniste el {{ profile.dateJoined }}</small
             ><br />
             <small>{{ profile.description }}</small>
           </div>
-          <div *ngIf="!profile" class="col-9 col-xxl-7">
-            <button
-              class="btn btn-sm form-control-loading loading-10 mb-2"
-            ></button>
-            <button
-              class="btn btn-sm form-control-loading loading-25 mb-2"
-            ></button>
-            <button class="btn btn-sm form-control-loading loading-50"></button>
+          <div *ngIf="!profile" class="col">
+            <h2 class="card-title gap-2 placeholder-glow">
+              <span class="placeholder col-1"></span>
+              <span class="placeholder col-1 ms-1"></span>
+            </h2>
+            <p class="card-text placeholder-glow">
+              <span class="placeholder col-3"></span><br />
+              <span class="placeholder col-10"></span><br />
+            </p>
           </div>
         </div>
       </div>
     </div>
-
-    <ul class="list-group list-group-horizontal mt-2">
-      <button
-        *ngIf="profile"
-        class="btn btn-sm btn-color text-light"
-        data-bs-toggle="modal"
-        data-bs-target="#profilePictureModal"
-      >
-        Cambiar foto
-      </button>
-      <button
-        *ngIf="!profile"
-        class="btn btn-sm form-control-loading button-loading loading-10"
-      ></button>
-    </ul>
 
     <div class="row justify-content-center">
       <div [@fadeIn] class="col-lg rounded p-4">
@@ -89,6 +117,7 @@
                 formControlName="name"
                 placeholder="{{ profile.name }}"
                 class="form-control"
+                [readonly]="!editProfile"
               />
               <input
                 *ngIf="!profile"
@@ -96,7 +125,7 @@
                 type="text"
                 class="form-control-loading"
               />
-              <div *ngIf="profileForm.controls.name.errors">
+              <div *ngIf="profileForm.controls.name.errors && editProfile">
                 <small
                   [@fadeIn]
                   class="text-danger"
@@ -128,6 +157,7 @@
                 formControlName="lastName"
                 class="form-control"
                 placeholder="{{ profile.lastName }}"
+                [readonly]="!editProfile"
               />
               <input
                 *ngIf="!profile"
@@ -135,7 +165,7 @@
                 type="text"
                 class="form-control-loading"
               />
-              <div *ngIf="profileForm.controls.lastName.errors">
+              <div *ngIf="profileForm.controls.lastName.errors && editProfile">
                 <small
                   [@fadeIn]
                   class="text-danger"
@@ -160,7 +190,7 @@
 
             <div class="col-12">
               <label for="username" class="form-label">Nick</label>
-              <div class="input-group has-validation">
+              <div class="input-group">
                 <input
                   *ngIf="profile && profile.nick"
                   [@fadeIn]
@@ -168,6 +198,7 @@
                   formControlName="nick"
                   class="form-control"
                   placeholder="{{ profile.nick }}"
+                  [readonly]="!editProfile"
                 />
                 <input
                   *ngIf="!profile"
@@ -176,7 +207,7 @@
                   class="form-control-loading"
                 />
               </div>
-              <div *ngIf="profileForm.controls.nick.errors">
+              <div *ngIf="profileForm.controls.nick.errors && editProfile">
                 <small
                   [@fadeIn]
                   class="text-danger"
@@ -208,6 +239,7 @@
                 formControlName="email"
                 class="form-control"
                 placeholder="{{ profile.email }}"
+                [readonly]="!editProfile"
               />
               <input
                 *ngIf="!profile"
@@ -215,7 +247,7 @@
                 type="text"
                 class="form-control-loading"
               />
-              <div *ngIf="profileForm.controls.email.errors">
+              <div *ngIf="profileForm.controls.email.errors && editProfile">
                 <small
                   [@fadeIn]
                   class="text-danger"
@@ -248,6 +280,7 @@
                 type="date"
                 formControlName="dateBirth"
                 class="form-control"
+                [readonly]="!editProfile"
               />
               <input
                 *ngIf="!profile"
@@ -255,7 +288,7 @@
                 type="text"
                 class="form-control-loading"
               />
-              <div *ngIf="profileForm.controls.dateBirth.errors">
+              <div *ngIf="profileForm.controls.dateBirth.errors && editProfile">
                 <small
                   [@fadeIn]
                   class="text-danger"
@@ -286,6 +319,7 @@
                 type="text"
                 formControlName="description"
                 class="form-control"
+                [readonly]="!editProfile"
               ></textarea>
               <textarea
                 *ngIf="!profile"
@@ -293,10 +327,11 @@
                 type="text"
                 class="form-control-loading"
               ></textarea>
-              <div *ngIf="profileForm.controls.description.errors">
+              <div *ngIf="profileForm.controls.description.errors && editProfile">
                 <small
                   [@fadeIn]
                   class="text-danger"
+                  f
                   *ngIf="
                     profileForm.controls.description.touched &&
                     profileForm.controls.description.errors['minlength']
@@ -350,19 +385,24 @@
                 style="width: 12em"
               />
             </div>
-            <div *ngIf="image && image.base" class="col text-center">
+            <div [@fadeIn] *ngIf="image && image.base" class="col text-center">
               <h3>La imagen que vas a subir</h3>
               <img [src]="image.base" class="img-fluid" style="width: 12em" />
             </div>
           </div>
           <div class="row text-center">
-            <h3 *ngIf="!image.name">Selecciona una imagen para cambiar tu foto de perfil</h3>
+            <h3 *ngIf="!image.name">
+              Selecciona una imagen para cambiar tu foto de perfil
+            </h3>
             <form class="col">
               <label
                 #profilePictureLabel
                 for="profilePicture"
                 class="form-control-img"
                 >Selecciona una foto</label
+              >
+              <small [@fadeIn] *ngIf="image.name" class="text-color"
+                >Puedes seleccionar otra foto si quieres.</small
               >
               <input
                 #profilePicture
@@ -379,8 +419,10 @@
       </div>
       <div class="modal-footer border-0">
         <button
+          [disabled]="!image.name"
           (click)="updateProfilePicture()"
           class="btn btn-sm btn-color text-light"
+          data-bs-dismiss="modal"
         >
           Cambiar imagen
         </button>
